# orderbook-engine

./: .gitignore  Cargo.toml  README.md  config.toml
benches/: orderbook_bench.rs
src/: binance.rs  config.rs  lib.rs  main.rs  orderbook.rs  snapshot.rs  stream.rs  sync.rs
src/binance/: exchange_info.rs  mod.rs  snapshot.rs  stream.rs  types.rs
src/book/: mod.rs  orderbook.rs  scaler.rs  sync.rs
src/engine/: engine.rs  metrics.rs  mod.rs  runtime.rs  state.rs
src/tui/: app.rs  ui.rs
