[package]
name = "orderbook-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
num-traits = "0.2.19"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rust_decimal = "1.39.0"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "orderbook_bench"
harness = false
